新增外部某功能

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 MyArcBar/obj/Release/
 MyArcBar/obj/Debug/
 MyArcBar/bin/
+testcode/0731/code/WindowsFormsApp3/obj/
+testcode/0731/code/WindowsFormsApp3/packages/
+testcode/0808/WindowsFormsApp3/obj/
+testcode/0808/WindowsFormsApp3/packages/
+testcode/0808/WindowsFormsApp3/bin/
+testcode/0731/code/WindowsFormsApp3/bin/
